--- a/formulario.html
+++ b/formulario.html
@@ -17,7 +17,7 @@
     <label for="senha">Senha:</label>
     <input type="password" name="senha" id="senha" placeholder="Senha" required>
     <br>
-    <input type="submit" value="Cadastrar">
+    <button type="submit">Cadastrar</button>
   </form>
 </body>
 </html>
